Fix Gallery alignment

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -38,6 +38,7 @@
 }
 
 #gallery {
+    justify-content: center;
     gap: 1rem;
     padding: 1rem;
 
